# BRIEF_TERRAFORM

./: .gitignore  ANALYSE_STRUCTURE_PROJET.md  INSTRUCTIONS_WSL.md  MICROSOFT_AZURE_CLI.md  PLAN_MIGRATION.md  QUICKSTART_WSL.md  README.md  README_WSL.md  STRUCTURE_PROJET.md  STRUCTURE_VISUELLE.md  wsl.ps1  wsl.sh
Brief/: .gitignore  ANALYSE_BRIEF.md  CE_QUE_VOUS_DEVEZ_FAIRE.md  ETAPES_SUIVANTES.md  ETAT_ACTUEL.md  ETAT_PROJET.md  INDEX_GUIDES.md  PLAN_PROJET.md  QUICK_CONFIG.md  README.md  RESUME_VISUEL.md  ROADMAP.md  START_HERE.md  STRUCTURE_PROJET.md  main.tf  outputs.tf  (+2 more)
smarttech-streaming/smarttech-streaming/: README.md  docker-compose.yml  main.py  pyproject.toml
smarttech-streaming/smarttech-streaming/scripts/: producer_kafka.py  stream_files_to_delta_bronze.py  stream_kafka_to_delta_silver.py
smarttech-streaming/smarttech-streaming/veille/: 1.1-Veille-StructuredStreaming.ipynb  1.2-Veille-Time-Windows.ipynb
smarttech-streaming/smarttech-streaming/veille/stream_events/: file-0.json  file-1.json  file-10.json  file-100.json  file-101.json  file-102.json  file-103.json  file-104.json  file-105.json  file-106.json  file-107.json  file-108.json  file-109.json  file-11.json  file-110.json  file-111.json  file-112.json  file-113.json  file-114.json  file-115.json  file-116.json  file-117.json  file-118.json  file-119.json  file-12.json  file-120.json  file-121.json  file-122.json  file-123.json  file-124.json  file-125.json  file-126.json  file-127.json  file-128.json  file-129.json  file-13.json  file-130.json  file-131.json  file-132.json  file-133.json  (+903 more)
(+145 files in other folders)
